--- a/style.css
+++ b/style.css
@@ -90,9 +90,9 @@ main {
   object-fit: cover;
   border-radius: 50%;
   cursor: pointer;
-  border: 1px solid black;
-  box-shadow: 0 0 15px 0 rgba(0, 0, 0, 0.5);
-  transition: transform 0.2s ease-in-out, box-shadow 0.2s ease-in-out;
+  /*   border: 1px solid black; */
+  text-shadow: 0 0 15px 0 rgba(0, 0, 0, 0.5);
+  transition: transform 0.2s ease-in-out, text-shadow 0.2s ease-in-out;
 }
 
 #clicker img:hover {
@@ -101,7 +101,7 @@ main {
 
 #clicker img:active {
   transform: scale(1.05);
-  box-shadow: 0 0 6px 0 rgba(0, 0, 0, 0.5);
+  text-shadow: 0 0 6px 0 rgba(0, 0, 0, 0.5);
 }
 
 .items {
@@ -137,6 +137,8 @@ main {
   background-color: rgb(140, 216, 140);
   box-shadow: 0 5px 10px 0 rgba(0, 0, 0, 0.3);
   box-shadow: inset 0 0 10px 0 rgba(0, 0, 0, 0.3);
+  /* overflow-x: scroll; */
+  flex-wrap: wrap;
 }
 
 .upgrade {
@@ -258,7 +260,13 @@ main {
   justify-content: center;
   align-items: center;
   flex-direction: column;
+  height: 60vh;
   gap: 1rem;
+  overflow-y: scroll;
+  border: 2px solid black;
+  padding: 1rem;
+  padding-top: 33rem;
+  box-shadow: 0 0 15px 0 rgba(0, 0, 0, 0.5);
 }
 
 .building {
@@ -294,3 +302,10 @@ main {
   height: 75px;
   object-fit: cover;
 }
+
+/* @media screen and (max-width: 400px) {
+  #game {
+    flex-direction: column;
+  }
+  
+} */
