--- a/style.css
+++ b/style.css
@@ -29,7 +29,7 @@
   font-family: "Roboto", sans-serif;
 }
 
-main {
+body {
   background-color: var(--main-color);
 }
 
@@ -162,6 +162,8 @@ header {
 .currentBuds {
   text-align: center;
   margin-bottom: 2rem;
+  background-color: var(--main-color);
+  padding: 2rem;
 }
 
 #buds {
@@ -200,6 +202,8 @@ header {
   align-items: center;
   flex-direction: column;
   margin-top: 3rem;
+  z-index: 1;
+  background-color: var(--main-color);
 }
 
 .upgrade-row {
@@ -371,6 +375,45 @@ footer p {
 
 .upgrade-info {
   display: none;
+}
+
+#leaf-container {
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100vw;
+  height: 100vh;
+  pointer-events: none;
+  z-index: -1; /* Keep behind all other elements */
+  overflow: hidden;
+}
+
+.leaf {
+  position: absolute;
+  width: 32px;
+  height: 32px;
+  background-image: url("./assets/img/click_img.png");
+  background-size: contain;
+  background-repeat: no-repeat;
+  animation: fall 1s linear forwards, fadeOut 2s forwards;
+}
+
+@keyframes fall {
+  to {
+    transform: translateY(100vh) rotate(360deg);
+  }
+}
+
+@keyframes fadeOut {
+  0% {
+    opacity: 1;
+  }
+  90% {
+    opacity: 1;
+  }
+  100% {
+    opacity: 0;
+  }
 }
 
 @media screen and (min-width: 900px) {
