--- a/style.css
+++ b/style.css
@@ -32,6 +32,12 @@
 body {
   background-color: var(--main-color);
 }
+/* 
+main {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+} */
 
 .desktop {
   display: none;
@@ -350,6 +356,82 @@ header {
   object-fit: cover;
 }
 
+/* Stats */
+
+.stats-container {
+  display: flex;
+  flex-direction: column;
+  gap: 1.5rem;
+  margin-top: 2rem;
+  width: 100%;
+  max-width: 400px;
+  padding: 1rem;
+  background-color: var(--main-color);
+  box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+  border-radius: 10px;
+}
+
+.stats-container h2,
+.stats-container h3 {
+  width: 100%;
+  text-align: center;
+  color: var(--primary-color);
+}
+
+.stats-container h2 {
+  font-size: 1.8rem;
+  margin-bottom: 1rem;
+}
+
+.stats-container h3 {
+  font-size: 1.4rem;
+  margin-bottom: 0.75rem;
+  color: var(--secondary-color);
+}
+
+.stats-container table {
+  width: 100%;
+  border-collapse: separate;
+  border-spacing: 0 0.5rem;
+}
+
+.stats-container th, .stats-container td {
+  padding: 0.75rem;
+  border: none;
+  font-size: 1rem;
+  color: var(--primary-color);
+}
+
+.stats-container td {
+  background-color: var(--main-color);
+  box-shadow: 0 3px 6px rgba(0, 0, 0, 0.1);
+  border-radius: 8px;
+}
+
+.stats-container td:first-child {
+  font-weight: bold;
+  color: var(--secondary-color);
+}
+
+.stats-container td:last-child {
+  text-align: right;
+}
+
+.stats-table tr td:first-child {
+  min-width: 60%;
+  max-width: 60%;
+}
+
+.stats-table tr td:last-child {
+  min-width: 40%;
+  max-width: 40%;
+  text-align: right;
+  font-weight: bold;
+  font-size: 1.1rem;
+}
+
+/* Footer */
+
 footer {
   background-color: var(--primary-color);
   color: var(--main-color);
@@ -531,4 +613,12 @@ footer p {
   /*   .upgrade-row, .building-shop {
     width: 350px;
   } */
+
+  .stats-container {
+    position: absolute;
+    left: 2rem;
+    top: 5rem;
+    height: 70vh;
+    overflow-y: scroll;
+  }
 }
