--- a/style.css
+++ b/style.css
@@ -117,6 +117,26 @@ header {
   border-radius: 25px;
 }
 
+.music-control {
+  position: absolute;
+  left: 10rem;
+  top: 1rem;
+}
+
+.mute-button {
+  background-color: transparent;
+  border: none;
+  color: var(--main-color);
+  font-size: 2rem;
+  cursor: pointer;
+  transition: color 0.3s ease;
+}
+
+.mute-button:hover {
+  color: var(--secondary-color);
+}
+
+
 .hamburger i {
   font-size: 2rem;
   color: var(--main-color);
